fix horizontal scroll

--- a/scss/core/_general.scss
+++ b/scss/core/_general.scss
@@ -6,6 +6,7 @@
 
 body {
   width: 100vw;
+  overflow-x: hidden;
   background-color: $color-light;
   font-family: $font-text;
   font-size: 18px;
