--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 
 body {
   width: 100vw;
+  overflow-x: hidden;
   background-color: #fff;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
